@@ -1,3 +1,11 @@
+2010-10-19  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_visual_map.php
+	include/ajax/visual_console_builder.ajax.php
+	godmode/reporting/visual_console_builder.php: Added the html support
+	in the label type items of the visual consoles for pending
+	task 3063404
+
 2010-10-19  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* include/functions_db.php: added hook for "user translation" in function
